--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "core-js": "^2.6.5",
     "firebase": "^7.0.0",
     "fontawesome": "^5.6.3",
+    "sweetalert2": "^8.18.0",
     "vue": "^2.6.10",
     "vue-js-modal": "^1.3.31",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
