--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "core-js": "^2.6.5",
     "firebase": "^7.0.0",
     "fontawesome": "^5.6.3",
+    "moment": "^2.24.0",
+    "numeral": "^2.0.6",
     "sweetalert2": "^8.18.0",
+    "v-money": "^0.8.1",
     "vue": "^2.6.10",
     "vue-js-modal": "^1.3.31",
     "vue-router": "^3.1.3",
+    "vue-the-mask": "^0.11.1",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
