--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "sweetalert2": "^8.18.0",
     "v-money": "^0.8.1",
     "vue": "^2.6.10",
+    "vue-analytics": "^5.17.2",
     "vue-js-modal": "^1.3.31",
     "vue-router": "^3.1.3",
     "vue-the-mask": "^0.11.1",
