--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "^2.6.10",
     "vue-analytics": "^5.17.2",
     "vue-js-modal": "^1.3.31",
+    "vue-loading-overlay": "^3.2.0",
     "vue-router": "^3.1.3",
     "vue-the-mask": "^0.11.1",
     "vuex": "^3.1.1"
